--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "autofit.js": "^3.0.7",
+    "echarts": "^5.4.3",
+    "lodash-es": "^4.17.21",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "naive-ui": "^2.35.0",
     "typescript": "^5.0.2",
+    "vfonts": "^0.0.3",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   }
